Ensure extreme labels are not enormos on tablets.

--- a/cordova/www/css/index.css
+++ b/cordova/www/css/index.css
@@ -337,7 +337,7 @@ div.extremeLabels {
     vertical-align: bottom;
 }
 div.extremeLabels label {
-    font-size: 28pt;
+    font-size: 18pt;
     font-style: italic;
     display: table-cell;
     width: 50%;
